animatins to timeline added with fixed overflow in smaller devices

--- a/src/index.css
+++ b/src/index.css
@@ -33,3 +33,6 @@ a:active {
 * {
     -webkit-tap-highlight-color: transparent;
 }
+body{
+    overflow-x: hidden;
+}
